# livekit-agent-simulator

./: .gitignore  AGENTS.md  README.md  WIP.md  install.ps1  install.sh  pyproject.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  release.yml
docs/: PROBLEM.md  caller-behavior-research.md  interrupt-scenario-matrix.md  plugins.md  portability.md  smoke-test.md  telephony.md
docs/guide/: installation.md
docs/plans/: PLAN-20260713-telephony-simleg.md  PLAN-20260722-natural-caller-talk-v2.md  (+1 more)
scripts/: build_portable.py  generate_voice_interrupt_cues.py
templates/: GUIDE.md  config.yaml  outbound-human-pickup.jsonl  scenario-scaffold.jsonl  smoke-hello.jsonl
tests/: test_amd_templates.py  test_asserts.py  test_behavior_compile.py  test_caller_nudge.py  test_caller_policy.py  test_config.py  test_cue_catalog.py  test_cues.py  test_dispatch_mock.py  test_dtmf_script.py  test_end_call.py  test_event_writer.py  test_guide.py  test_hang_up_gate.py  test_interruption_rate.py  test_local_recorder.py  test_metrics.py  test_mic_mixer.py  test_observer.py  test_package_web_dir.py  test_pass_at_k.py  test_pcm_cue.py  test_persona_traits.py  test_plugins.py  test_preflight_telephony.py  test_run_id.py  test_scenario.py  test_scenario_caller_telephony.py  test_scenario_from_run.py  test_script.py  test_script_farewell.py  test_script_mute_semantics.py  test_silent_mode_nudge.py  test_sim_leg.py  test_suite.py  test_tool_events.py  test_transcript_dedupe.py  test_voice_gain.py  test_web_server.py
web/: README.md  package.json  vite.config.ts
(+100 files in other folders)
