[project]
name = "livekit-agent-simulator"
version = "0.1.0"
description = "Standalone MCP + CLI that simulates a realtime caller against any LiveKit voice agent and records a full forensic behavior log."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0",
    "livekit>=1.0",
    "livekit-api>=1.0",
    "google-genai>=1.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "aiosqlite>=0.20",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
lk-sim = "livekit_agent_simulator.cli:main"
livekit-agent-simulator-mcp = "livekit_agent_simulator.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/livekit_agent_simulator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
